Zine Changelog
==============

This file lists the major changes between the Zine releases.

Zine 0.2
--------

(Codename yet to be chosen; Release date yet unknown)


Zine 0.1.3
----------

(Bugfix release)

- The pingback system skips already pinged URLs now to speed things up.
- Fixed the author feed.


Zine 0.1.2
----------

(Bugfix release)

- `zine.importers.rewrite_import` properly accepts a string as first
  argument now.
- Fixed the config page for `ascii_slugs`.  Ticking/unticking the
  checkbox resulted in an internal server error.
- fixed a bug in the WordPress importer with comment dates.
- fixed a bug in the ZXA exporter.  Among other things tag exporting
  did not work properly.
- importer no longer creates new users if a user was selected in the
  dropdown.
- fixed importing of ZXA feeds with tags.
- improved importing of ZXA feeds (importers import the correct
  syntax instead of HTML now)
- fixed wrong content type exporting in ZXA feeds.
- fixed bug in tag-cloud query.  Too many items were counted for
  each tag.
- fixed tag Atom feed.
- Atom feeds for the index now only contain posts of the types for
  the index page as configured.
- added Brazilian Portuguese translation.
- Fixed the bug that made it impossible to set the slug to the
  publication defined on new entry creation.
- ZEML handles newlines in elements properly now.
- optimized some queries.
- Under some circumstances text after elements appered multiple times
  in ZEML.
- the information export page strips confidental information in database
  URIs now (passwords).
- the text parser no longer supports images and youtube links for security
  and sanity reasons.
- Fixed a bug where changing the comment parser did not trigger the parsing.
- Fixed some display bugs in the admin panel for webkit.


Zine 0.1.1
----------

(Bugfix release; Released December 29th 2008)

- Fixed a bug that caused the akismet plugin not to work.