@@ -15,6 +15,7 @@ Zine 0.1.3
 (Bugfix release)
 
 - The pingback system skips already pinged URLs now to speed things up.
+- Fixed pingback support.
 - Fixed the author feed.
 
 
